# JackFreqD

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  ChangeLog  Makefile  cpu_freq.c  jack_cpu_load.c  jackfreq.service  jackfreqd.1  jackfreqd.c  jackfreqd.init  procps.c
.github/workflows/: build.yml
build-scripts/: build-on-linux.sh  prepare-ubuntu.sh
debian/: changelog  control  copyright  init.d  rules
nbproject/: configurations.xml  project.xml
packaging/: jackfreq.service.in  jackfreq.spec  prerm
src/: globals.h  jack_cpu_load.c  jackfreqd.c  procps.c
tools/: busyjack.c  jackxrun.c
